--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,9 @@ body {
 img {
   max-width: 100%;
 }
+a{
+  cursor: pointer;
+}
 main {
   padding: 10px;
   max-width: 960px;
@@ -85,6 +88,7 @@ input {
   background-color: #fff;
 }
 button {
+  cursor: pointer;
   width: 100%;
   display: block;
   background-color: #555;
@@ -131,4 +135,21 @@ div.post-page div.author {
 }
 div.post-page div.content p {
   line-height: 1.6rem;
+}
+div.edit-row {
+  text-align: center;
+  margin-bottom: 20px;
+}
+div.post-page a.edit-btn {
+  background-color: #334;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 10px;
+  text-decoration: none;
+}
+a svg {
+  height: 20px;
 }
